veecle-os-runtime-macros/tests/ui/actor/return_nothing.stderr
error: #[actor] functions must return a `Result` or `Never`
 --> tests/ui/actor/return_nothing.rs:5:1
  |
5 | async fn macro_test_actor(
  | ^^^^^

error[E0425]: cannot find type `MacroTestActor` in this scope
  --> tests/ui/actor/return_nothing.rs:14:18
   |
14 |         actors: [MacroTestActor],
   |                  ^^^^^^^^^^^^^^ not found in this scope

error[E0282]: type annotations needed
  --> tests/ui/actor/return_nothing.rs:13:13
   |
13 |       let _ = veecle_os_runtime::execute! {
   |  _____________^
14 | |         actors: [MacroTestActor],
15 | |     };
   | |_____^ cannot infer type
   |
   = note: this error originates in the macro `veecle_os_runtime::execute` (in Nightly builds, run with -Z macro-backtrace for more info)
